--- a/style.css
+++ b/style.css
@@ -73,9 +73,11 @@ img:hover {
 }
 
 .time {
-	font-size: 25px;
+	font-size: 30px;
+	width: 159px;
 	position: absolute;
 	top: 100px;
+	display: flex;
 }
 
 h1 {
@@ -105,3 +107,27 @@ h1 {
 	50% {background-position: right}
 	100% {background-position: left}
   }
+
+button{
+	width: 158px;
+	height: 40px;
+	font-size: 1rem;
+	color: #fff;
+	background: #000;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	background: #51A0BD;
+	border-radius: 10px;
+}
+
+.new_game_div {
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+}
+
+.div_with_btn {
+	display: flex;
+	justify-content: center;
+}
