--- a/style.css
+++ b/style.css
@@ -124,10 +124,26 @@ button{
 .new_game_div {
 	display: flex;
 	flex-direction: column;
-	align-content: center;
+	/* align-content: center; */
+	margin-top: -200px;
 }
 
 .div_with_btn {
 	display: flex;
 	justify-content: center;
+}
+
+.time-animation:after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: #a10e0ec7;
+  animation: pulse 1.1s ease infinite;
+}
+
+@keyframes pulse {
+  from { transform: scale(1); opacity: 1}
+  to {transform: scale(1.5); opacity: 0}
 }
