--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
 	font-family: basic-sans, sans-serif;
 	/* min-height: 100vh; */
+	min-height: 650px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
