--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
 	pointer-events: none;
 }
 
+h1 {
+	margin: 0;
+	padding: 0;
+	line-height: 100%;
+}
+
 body {
 	font-family: basic-sans, sans-serif;
 	/* min-height: 100vh; */
